fix: snackbar z-index

--- a/packages/components/_provisional/src/snackbar/styles/index.module.scss
+++ b/packages/components/_provisional/src/snackbar/styles/index.module.scss
@@ -1,4 +1,5 @@
 @import "@react-ck/theme";
+@import "@react-ck/elevation";
 
 .root {
   position: fixed;
@@ -15,4 +16,5 @@
   overflow: auto;
   pointer-events: none;
   filter: drop-shadow(0 1px 5px rgba(0, 0, 0, 0.1));
+  z-index: map-get-strict($elevation, popup);
 }
